--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tauri:py:dev": ".venv\\Scripts\\activate.bat && tauri dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -31,13 +32,15 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
     "react-router": "^7.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
-    "tauri-plugin-pytauri-api": "^0.6.0"
+    "tauri-plugin-pytauri-api": "^0.6.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
